ams-trigger-framework/main/default/objects/ams_TriggerConfiguration__mdt/fields/ams_HandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>ams_HandlerClassName__c</fullName>
    <inlineHelpText>Add name of trigger handler class here.</inlineHelpText>
    <label>Handler Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>