ams-trigger-framework/main/default/objects/ams_TriggerConfiguration__mdt/fields/ams_IsActive__c.field-meta.xml
<CustomField>
    <fullName>ams_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick / untick to easily deactivate trigger handlers.</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>