ams-trigger-framework/main/default/objects/ams_TriggerConfiguration__mdt/fields/ams_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ams_ObjectName__c</fullName>
    <inlineHelpText>Add object API name here.</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>