ams-trigger-framework/main/default/objects/ams_TriggerConfiguration__mdt/listViews/ams_AllTriggerConfigurations.listView-meta.xml
<ListView>
    <fullName>ams_AllTriggerConfigurations</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ams_ObjectName__c</columns>
    <columns>ams_HandlerClassName__c</columns>
    <columns>ams_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trigger Configurations</label>
</ListView>